--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
         
         # Build Windows and OSX
         - name: Build Windows Player
-          run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -silent-crashes -noUpm -logFile -projectPath . -buildWindows64Player ./bin-win64/CISample.exe
+          run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -silent-crashes -noUpm -logFile -projectPath . -executeMethod BuildProject.BuildAndroid ./AndroidBuilds/testBuild.apk
        
         - name: Archive Windows Build
           uses: actions/upload-artifact@v1
           with:
-            name: CISampleWin64Binary
-            path: ./bin-win64
+            name: AndroidApks
+            path: ./AndroidBuilds
