--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ jobs:
         - name: Checkout Project
           uses: actions/checkout@v1
 
+        - run: chmod +x escape_dll_hell.sh
+
+        - run: ./escape_dll_hell.sh
+
         - name: Decrypt the license file
           run: openssl aes-256-cbc -d -in .github/Unity_v2019.x.ulf.enc -k ${{ secrets.UNITY_LICENSE_DECRYPT_KEY }} >> .github/Unity_v2019.x.ulf
         
