--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [push]
+on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-16.04
@@ -10,7 +10,7 @@ jobs:
 
         - run: chmod +x escape_dll_hell.sh
 
-        - run: ./escape_dll_hell.sh
+        - run: ./escape_dll_hell
 
         - name: Decrypt the license file
           run: openssl aes-256-cbc -d -in .github/Unity_v2019.x.ulf.enc -k ${{ secrets.UNITY_LICENSE_DECRYPT_KEY }} >> .github/Unity_v2019.x.ulf
